# portfolio

./: README.md
Project 1/: Dockerfile  README.md  dagster.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py  workspace.yaml
Project 1/Poetry/: pyproject.toml
Project 1/dbt/: dbt_project.yml  profiles.yml
Project 1/dbt/macros/: generate_schema_name.sql
Project 1/dbt/models/: source.yml
Project 1/dbt/models/marts/: bi_customers.sql  bi_orders.sql  schema.yml
Project 1/dbt/models/stage/: schema.yml  stg_customers.sql  stg_events.sql  stg_orders.sql  stg_organizers.sql  stg_product.sql
Project 1/pipeline/: definitions.py
Project 1/pipeline/assets/: __init__.py  base.py  constants.py  schedules.py
Project 2/: E-commerce.pbip
Project 2/E-commerce.Dataset/: diagramLayout.json  model.bim
Project 2/E-commerce.Dataset/DAXQueries/: Query 1.dax
Project 2/E-commerce.Report/: definition.pbir  report.json
Project 2/E-commerce.Report/StaticResources/RegisteredResources/: Custom7677124524757175.json
