[tool.poetry]
name = "techhaus"
version = "0.1.0"
description = ""
authors = ["Khoi Nguyen Vo <vknguyen1409@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dagster = "1.6.5"
dagster-webserver = "1.6.5"
dagster-graphql = "1.6.5"
dagster-pipes = "1.6.5"
dagster-dbt = "0.22.5"
dagster-postgres = "0.22.5"
dagster-docker = "0.22.5"
pandas = "^2.2.1"
boto3 = "^1.34.44"
botocore = "^1.34.44"
dbt-bigquery = "^1.7.6"
google-cloud-bigquery = "^3.19.0"
google-cloud = "^0.34.0"
dbt-core = "^1.7.9"
s3fs = "^2024.2.0"
fsspec = "^2024.2.0"
s3transfer = "^0.10.0"
pyarrow = "^15.0.1"
msal = "1.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"